# st-multimodal-chatinput

./: .gitignore  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  setup.py  todo.txt  video.webm
multimodal-chatinput/: __init__.py
st_multimodal_chatinput/: __init__.py
st_multimodal_chatinput.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
st_multimodal_chatinput/frontend/: package-lock.json  package.json
st_multimodal_chatinput/frontend/src/: MultimodalChatInput.tsx  index.tsx
